Bug 1525492 - [release 123] Align tabs with source items. (#7860). r=dwalsh

--- a/devtools/client/debugger/new/src/components/Editor/Tabs.css
+++ b/devtools/client/debugger/new/src/components/Editor/Tabs.css
@@ -49,6 +49,7 @@
   height: 30px;
   font-size: 12px;
   background-color: transparent;
+  vertical-align: bottom;
 }
 
 .source-tab::before {
